--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
-    "gatsby": "^2.8.6",
+    "gatsby": "^2.19.18",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "typeface-lato": "0.0.75"
   },
   "devDependencies": {
     "prettier": "^1.18.0"
